# time-series-compression

./: CMakeLists.txt  LICENSE
lib/: TimeSeriesCompression.cpp  TimeSeriesCompression.h
test/: tests.cpp
